back button complete

--- a/frontend/src/app/report/student-details/student-details.component.css
+++ b/frontend/src/app/report/student-details/student-details.component.css
@@ -43,6 +43,9 @@ body{
         border: 1px solid;
   
     }
+    #login .back-btn{
+        
+    }
     .fa-facebook-square {
         font-size: 20px;
         color: darkblue;
