--- a/frontend/src/app/report/student-details/student-details.component.html
+++ b/frontend/src/app/report/student-details/student-details.component.html
@@ -43,6 +43,9 @@
                       </tbody>
                     </table>
              </div>
+             <button type="button" class="btn btn-primary col-sm-2 col-md-offset-8"  (click)="onBack()" > 
+              Back
+             </button>
              <div class="row" id="login">
         
                  <div class="col-md-8 col-md-offset-2">
@@ -61,9 +64,7 @@
                      </div>
                    </div>
                  </div>
-                 <button type="button" class="btn btn-primary login-btn" (click)="onBack()" > 
-                  Back
-                 </button>
+                 
              
         <!-- <div class="tableFixHead panel-body" width=vw; height=vh;> -->
     
