--- a/frontend/src/app/gradManagement/admin/showgrads/showgrads.component.scss
+++ b/frontend/src/app/gradManagement/admin/showgrads/showgrads.component.scss
@@ -3,27 +3,32 @@
 //     font-family: 'Times New Roman', Times, serif;
 //     /* overflow: scroll; */
 // }
-.tableFixHead          { overflow-y: auto; }
-.tableFixHead thead th { position: sticky; top: 0; }
+// .tableFixHead          { overflow-y: auto; }
+// .tableFixHead thead th { position: sticky; top: 0; }
 
-table  { border-collapse: collapse; width: 100%;
-  font-family: 'Times New Roman', Times, serif; 
-}
-th, td { padding: 8px 16px; }
-th{
-  color:white;
-}
-thead {
-background-color: #337ab7;
+// table  { border-collapse: collapse; width: 100%;
+//   font-family: 'Times New Roman', Times, serif; 
+// }
+// th, td { padding: 8px 16px; }
+// th{
+//   color:white;
+// }
+// thead {
+// background-color: #337ab7;
+// }
+
+::ng-deep .ag-theme-balham .ag-header {
+  background-color : #337ab7;
+  color: white;
 }
 
-input {
-    width: 18%;
-    margin: 5px 3px;
-    box-sizing:border-box;
-    border: 1px solid rgb(202, 200, 200);
-    border-radius: 5px;
-    padding: 3px;
+// input {
+//     width: 18%;
+//     margin: 5px 3px;
+//     box-sizing:border-box;
+//     border: 1px solid rgb(202, 200, 200);
+//     border-radius: 5px;
+//     padding: 3px;
 
     
-}
+// }
