--- a/frontend/src/app/report/student-details/student-details.component.css
+++ b/frontend/src/app/report/student-details/student-details.component.css
@@ -6,7 +6,8 @@ body{
   .tableFixHead thead th { position: sticky; top: 0; }
   
   table  { border-collapse: collapse; width: 100%; }
-  th, td { padding: 8px 16px; }
+  th, td { padding: 8px 16px;
+         text-align: center }
   th     { background:#eee; }
   
 
