--- a/frontend/src/app/report/front/front.component.css
+++ b/frontend/src/app/report/front/front.component.css
@@ -29,7 +29,10 @@ body{
   .tableFixHead          { overflow-y: auto; height: 500px; }
 .tableFixHead thead th { position: sticky; top: 0; }
 
-table  { border-collapse: collapse; width: 100%; }
+table  { 
+  /* border-collapse: collapse; */
+  width: 100%; }
+
 th, td { padding: 8px 16px; }
 th     { background:#eee; }
 
