--- a/frontend/src/app/report/front/front.component.html
+++ b/frontend/src/app/report/front/front.component.html
@@ -52,8 +52,8 @@
       <div class="row" id="login">
         
           <div class="col-md-8 col-md-offset-2">
-            <div class="panel panel-default">
-               <div class="panel-body">
+            <div class="panel">
+               <div>
                    <div>  
                      <ag-grid-angular style="width: 100%; height:500px" 
                            class="ag-theme-balham"
